gcc/testsuite/rust.test/compilable/arrays2.rs
fn main() {
    let mut array: [i32; 3] = [0; 3];

    let a = array[0];
    let mut c;
    c = array[2];
}
