gcc/testsuite/rust.test/fail_compilation/redef_error2.rs
const TEST: i32 = 2;
const TEST: f32 = 3.0;

fn main() {}
